# CSAI

./: .gitignore  CMakeLists.txt  README.md
Lab1/: CSAI_lab1.cpp
Lab2/: CSAI_lab2.cpp  lab2
Lab3/: CSAI_lab3.cpp  compiler.txt  lab3
Lab4/: CSAI_lab4.cpp  test.cpp
